add color game link

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                             <a href="https://malanski.github.io/Poke-Loja-3/" title="A different approach ">Ecommerce Clean</a>
                         </li>
                         <li>
+                            <a href="https://malanski.github.io/GessingColorGame/" title="Gessing Color Game">Gessing Color Game</a>
+                        </li>
+                        <li>
                             <a href="https://malanski.github.io/MyResume/" title="A short personal Resume">My Resume</a>
                         </li>
                         <li>
