add cron and pokestore-react links

--- a/index.html
+++ b/index.html
@@ -103,16 +103,22 @@
                     <h4>Links to Other Projects by Ulisses Malanski</h4>
                     <ul class="projects">
                         <li>
-                            <a href="https://malanski.github.io/pokeLoja2/" title="My Firts project">Ecommerce Card Game</a>
+                            <a href="https://malanski.github.io/pokeLoja2/" title="My Firts JavaScript project">Ecommerce Card Game</a>
                         </li>
                         <li>
-                            <a href="https://malanski.github.io/Poke-Loja-3/" title="A different approach ">Ecommerce Clean</a>
+                            <a href="https://malanski.github.io/pokestore-react/" title="Firts React-Appt">Ecommerce Pokémon Store</a>
+                        </li>
+                        <li>
+                            <a href="https://malanski.github.io/Poke-Loja-3/" title="A different approach ">Ecommerce Poké-Store</a>
                         </li>
                         <li>
                             <a href="https://malanski.github.io/GessingColorGame/" title="Gessing Color Game">Gessing Color Game</a>
                         </li>
                         <li>
                             <a href="https://malanski.github.io/MyResume/" title="A short personal Resume">My Resume</a>
+                        </li>
+                        <li>
+                            <a href="https://malanski.github.io/cron/" title="Cronometer">CronometerReact-App Cron</a>
                         </li>
                         <li>
                             <a href="https://malanski.github.io/CalculatorX/" title="JavaScript study Calculator">Calculator</a>
